--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,29 @@
     "copy-html-entry": "cp ../ws_event_page/public/frontend/index.html ../ws_event_page/www/events.html"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dicebear": "^9.2.2",
     "frappe-react-sdk": "^1.9.0",
+    "i18next": "^24.0.5",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "lodash": "^4.17.21",
+    "phosphor-react": "^1.4.1",
+    "polished": "^4.3.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.4",
+    "react-router-dom": "6.22.3",
+    "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
