--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,7 +23,8 @@
       "@molecules/*": ["src/core/ui/molecules/*"],
       "@features/*": ["src/features/*"],
       "@templates/*": ["src/core/ui/templates/*"],
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@happy-box/*": ["src/app/happy-box/*"]
     }
   },
   "include": ["src", "tailwind.config.ts", ".storybook", "alltypes.d.ts"]
