--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-easy-crop": "^5.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
