--- a/ws_event_page/fixtures/wse_settings.json
+++ b/ws_event_page/fixtures/wse_settings.json
@@ -1,10 +1,10 @@
 [
  {
-  "default_homepage_event": "happy-box",
+  "default_homepage_event": "thu-thach-don-tet",
   "default_homepage_url": "thu-thach-don-tet",
   "docstatus": 0,
   "doctype": "WSE Settings",
-  "modified": "2024-12-12 11:04:32.147105",
+  "modified": "2025-01-02 08:18:47.557788",
   "name": "WSE Settings"
  }
 ]
