fix: set base name for env production

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
-VITE_BASE_NAME=""
+VITE_BASE_NAME="events"
 VITE_SOCKET_PORT=9000
 VITE_ASSET_URL=/assets/ws_event_page/frontend
 VITE_SITE_NAME=https://wisers.wellspringsaigon.edu.vn
