Update code happy-run

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,5 +27,5 @@
       "@happy-box/*": ["src/app/happy-box/*"]
     }
   },
-  "include": ["src", "tailwind.config.ts", ".storybook", "alltypes.d.ts"]
+  "include": ["src", "tailwind.config.ts", "alltypes.d.ts"]
 }
