--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "frappe-react-sdk": "^1.9.0",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.2",
+    "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "phosphor-react": "^1.4.1",
     "polished": "^4.3.1",
