--- a/ws_event_page/wellspring_event_page/doctype/wse_hr_settings/wse_hr_settings.json
+++ b/ws_event_page/wellspring_event_page/doctype/wse_hr_settings/wse_hr_settings.json
@@ -5,10 +5,17 @@
  "doctype": "DocType",
  "engine": "InnoDB",
  "field_order": [
+  "general_section",
   "wellbeing_ticket_price",
   "email_sender",
   "column_break_ghgo",
-  "happy_run_ticket_price"
+  "happy_run_ticket_price",
+  "vietqr_url",
+  "bank_account_section",
+  "account_number",
+  "bin_number",
+  "column_break_ddga",
+  "account_name"
  ],
  "fields": [
   {
@@ -44,12 +51,51 @@
    "non_negative": 1,
    "precision": "0",
    "reqd": 1
+  },
+  {
+   "default": "https://api.vietqr.io/v2/generate",
+   "fieldname": "vietqr_url",
+   "fieldtype": "Data",
+   "label": "VietQR URL",
+   "reqd": 1
+  },
+  {
+   "fieldname": "general_section",
+   "fieldtype": "Section Break",
+   "label": "General"
+  },
+  {
+   "fieldname": "bank_account_section",
+   "fieldtype": "Section Break",
+   "label": "Bank Account"
+  },
+  {
+   "fieldname": "account_number",
+   "fieldtype": "Data",
+   "label": "Account Number",
+   "reqd": 1
+  },
+  {
+   "fieldname": "bin_number",
+   "fieldtype": "Data",
+   "label": "BIN number",
+   "reqd": 1
+  },
+  {
+   "fieldname": "column_break_ddga",
+   "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "account_name",
+   "fieldtype": "Data",
+   "label": "Account Name",
+   "reqd": 1
   }
  ],
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-02-06 08:49:00.918022",
+ "modified": "2025-02-12 14:29:42.132857",
  "modified_by": "Administrator",
  "module": "Wellspring Event Page",
  "name": "WSE HR Settings",
@@ -64,6 +110,13 @@
    "role": "System Manager",
    "share": 1,
    "write": 1
+  },
+  {
+   "email": 1,
+   "print": 1,
+   "read": 1,
+   "role": "Guest",
+   "share": 1
   }
  ],
  "sort_field": "modified",
