--- a/ws_event_page/wellspring_event_page/doctype/wse_hr_settings/wse_hr_settings.json
+++ b/ws_event_page/wellspring_event_page/doctype/wse_hr_settings/wse_hr_settings.json
@@ -12,10 +12,11 @@
   "happy_run_ticket_price",
   "vietqr_url",
   "bank_account_section",
-  "account_number",
+  "bank_short_name",
   "bin_number",
   "column_break_ddga",
-  "account_name"
+  "account_name",
+  "account_number"
  ],
  "fields": [
   {
@@ -90,12 +91,18 @@
    "fieldtype": "Data",
    "label": "Account Name",
    "reqd": 1
+  },
+  {
+   "fieldname": "bank_short_name",
+   "fieldtype": "Data",
+   "label": "Bank Short Name",
+   "reqd": 1
   }
  ],
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-02-12 14:29:42.132857",
+ "modified": "2025-02-12 16:17:08.616446",
  "modified_by": "Administrator",
  "module": "Wellspring Event Page",
  "name": "WSE HR Settings",
