--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dicebear": "^9.2.2",
+    "file-saver": "^2.0.5",
     "frappe-react-sdk": "^1.9.0",
     "html-react-parser": "^5.2.2",
     "i18next": "^24.0.5",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.10.1",
     "@types/react": "^19.0.1",
