--- a/ws_event_page/wellspring_event_page/doctype/wse_hr_settings/wse_hr_settings.json
+++ b/ws_event_page/wellspring_event_page/doctype/wse_hr_settings/wse_hr_settings.json
@@ -102,7 +102,7 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-02-12 16:17:08.616446",
+ "modified": "2025-02-13 18:10:48.564055",
  "modified_by": "Administrator",
  "module": "Wellspring Event Page",
  "name": "WSE HR Settings",
@@ -124,6 +124,16 @@
    "read": 1,
    "role": "Guest",
    "share": 1
+  },
+  {
+   "create": 1,
+   "delete": 1,
+   "email": 1,
+   "print": 1,
+   "read": 1,
+   "role": "WSE HR Admin",
+   "share": 1,
+   "write": 1
   }
  ],
  "sort_field": "modified",
