--- a/ws_event_page/wellspring_event_page/doctype/wse_hr_settings/wse_hr_settings.json
+++ b/ws_event_page/wellspring_event_page/doctype/wse_hr_settings/wse_hr_settings.json
@@ -102,7 +102,7 @@
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-02-13 18:10:48.564055",
+ "modified": "2025-02-17 11:34:21.435757",
  "modified_by": "Administrator",
  "module": "Wellspring Event Page",
  "name": "WSE HR Settings",
@@ -138,5 +138,6 @@
  ],
  "sort_field": "modified",
  "sort_order": "DESC",
- "states": []
+ "states": [],
+ "track_changes": 1
 }
