--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
     "copy-html-entry": "cp ../ws_event_page/public/frontend/index.html ../ws_event_page/www/events.html"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
+    "@types/three": "^0.173.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -21,7 +25,6 @@
     "file-saver": "^2.0.5",
     "frappe-react-sdk": "^1.9.0",
     "gsap": "^3.12.7",
-    "gsap-trial": "^3.12.7",
     "html-react-parser": "^5.2.2",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.2",
@@ -38,9 +41,11 @@
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.1.4",
     "react-router-dom": "6.22.3",
+    "smooth-scrollbar": "^8.8.4",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.173.0",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
@@ -48,7 +53,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.10.1",
-    "@types/react": "^19.0.1",
+    "@types/react": "18",
     "@types/react-dom": "^18.3.1",
     "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.3.4",
