--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.1.4",
+    "react-intersection-observer": "^9.15.1",
     "react-router-dom": "6.22.3",
     "smooth-scrollbar": "^8.8.4",
     "styled-components": "^6.1.13",
