--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-i18next": "^15.1.4",
     "react-intersection-observer": "^9.15.1",
     "react-router-dom": "6.22.3",
+    "react-scroll": "^1.9.3",
     "smooth-scrollbar": "^8.8.4",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.5",
@@ -57,6 +58,7 @@
     "@types/react": "18",
     "@types/react-dom": "^18.3.1",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
