--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react-dropzone": "^14.3.5",
     "react-easy-crop": "^5.2.0",
     "react-fast-marquee": "^1.6.5",
+    "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.1.4",
