--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-easy-crop": "^5.2.0",
+    "react-error-boundary": "^5.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
