ac: add sending test result

--- a/ws_event_page/wellspring_event_page/doctype/wse_ac_settings/wse_ac_settings.json
+++ b/ws_event_page/wellspring_event_page/doctype/wse_ac_settings/wse_ac_settings.json
@@ -7,6 +7,7 @@
  "field_order": [
   "open_test_registration",
   "open_nhtn_event",
+  "test_result_attachment",
   "column_break_cvzp",
   "test_registration_closing_time"
  ],
@@ -31,12 +32,18 @@
    "fieldname": "open_test_registration",
    "fieldtype": "Check",
    "label": "Open Test Registration"
+  },
+  {
+   "default": "0",
+   "fieldname": "test_result_attachment",
+   "fieldtype": "Check",
+   "label": "Test Result Attachment"
   }
  ],
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-02-23 15:06:15.183819",
+ "modified": "2025-03-25 11:36:07.069949",
  "modified_by": "Administrator",
  "module": "Wellspring Event Page",
  "name": "WSE AC Settings",
