--- a/ws_event_page/wellspring_event_page/workspace/happy_run_event/happy_run_event.json
+++ b/ws_event_page/wellspring_event_page/workspace/happy_run_event/happy_run_event.json
@@ -79,7 +79,7 @@
    "type": "Link"
   }
  ],
- "modified": "2025-02-21 11:17:35.757864",
+ "modified": "2025-10-29 14:11:54.042372",
  "modified_by": "Administrator",
  "module": "Wellspring Event Page",
  "name": "Happy Run Event",
@@ -102,7 +102,7 @@
   }
  ],
  "owner": "Administrator",
- "parent_page": "",
+ "parent_page": "Wellspring Events",
  "public": 1,
  "quick_lists": [],
  "roles": [
@@ -110,7 +110,7 @@
    "role": "WSE HR Admin"
   }
  ],
- "sequence_id": 9.0,
+ "sequence_id": 17.0,
  "shortcuts": [
   {
    "color": "Grey",
