--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "i18next-browser-languagedetector": "^8.0.2",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
+    "motion": "^12.23.24",
     "phosphor-react": "^1.4.1",
     "polished": "^4.3.1",
     "react": "^18.3.1",
