--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "react-intersection-observer": "^9.15.1",
     "react-router-dom": "6.22.3",
     "smooth-scrollbar": "^8.8.4",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
