--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.468.0",
     "phosphor-react": "^1.4.1",
     "react-hook-form": "^7.54.0",
+    "sonner": "^2.0.7",
     "zod": "^3.24.1"
   }
 }
