--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-error-boundary": "^5.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.1.4",
