--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,7 +27,8 @@
       "@happy-box/*": ["src/app/happy-box/*"],
       "@nutrition-journey/*": ["src/app/nutrition-journey/*"],
       "@happy-run/*": ["src/app/happy-run/*"],
-      "@greatest-show-25/*": ["src/app/greatest-show-25/*"]
+      "@greatest-show-25/*": ["src/app/greatest-show-25/*"],
+      "@kindergarten-demo-day/*": ["src/app/kindergarten-demo-day/*"]
     }
   },
   "include": ["src", "tailwind.config.ts", ".storybook", "alltypes.d.ts"]
