--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,20 +18,25 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^9.121.5",
     "@react-three/fiber": "^8.17.14",
+    "@types/downloadjs": "^1.4.6",
     "@types/three": "^0.173.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "dicebear": "^9.2.2",
+    "downloadjs": "^1.4.7",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
     "frappe-react-sdk": "^1.9.0",
     "gsap": "^3.13.0",
     "html-react-parser": "^5.2.2",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.2",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.3",
     "lodash": "^4.17.21",
     "motion": "^12.23.24",
     "phosphor-react": "^1.4.1",
