--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "i18next-browser-languagedetector": "^8.0.2",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.3",
+    "leva": "^0.10.1",
     "lodash": "^4.17.21",
     "motion": "^12.23.24",
     "phosphor-react": "^1.4.1",
