--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "jspdf": "^3.0.3",
     "leva": "^0.10.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.563.0",
     "motion": "^12.23.24",
     "phosphor-react": "^1.4.1",
     "polished": "^4.3.1",
