--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-
+  "devDependencies": {
+    "@hookform/resolvers": "^5.2.2"
   }
 }
