--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^5.0.1",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-radio-group": "^1.2.2",
@@ -59,6 +62,7 @@
     "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.1.4",
     "react-intersection-observer": "^9.15.1",
     "react-router-dom": "6.22.3",
